# actix-bincode

./: Cargo.toml  README.md
src/: body.rs  config.rs  error.rs  http_response_builder_ext.rs  lib.rs  tests.rs
