[package]
name = "actix-bincode"
version = "0.2.0"
authors = ["Dany Laporte <dany.laporte@hotmail.com>"]
edition = "2018"
description = "Bincode support for Actix-Web"
readme = "README.md"
repository = "https://github.com/danylaporte/actix-bincode"
keywords = ["serde", "actix", "bincode", "web", "async"]
categories = ["encoding", "web-programming", "asynchronous"]
publish = false

[dependencies]
actix-web = { version = "4.0.0-beta.6", default-features = false }
bincode = "1"
futures-util = "0.3.5"
mime = "0.3"
serde = "1"
tracing = "0.1"

[dev-dependencies]
actix-rt = "2"
serde = { version = "1", features = ["derive"] }
